--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -29,8 +29,7 @@
         </p>
 
         <button class="bg-white hover:bg-gray-50 text-gray-900 font-semibold px-8 py-3 rounded-full text-base shadow-lg hover:shadow-xl transition-all duration-200 transform hover:scale-105" (click)="talkToSales()">
-          <span class="hidden sm:inline">Become a Partner</span>
-          <span class="sm:hidden">Partner</span>
+          Become a Partner
         </button>
     </div>
 </section>
